2012-06-16  Igor Gorbunov  <igor.genius@gmail.com>

	* ChangeLog: This file created.

Copyright 2012 Igor Gorbunov

Copying and distribution of this file, with or without modification, are
permitted in any medium without royalty provided the copyright notice
and this notice are preserved.
