@@ -1,5 +1,29 @@
+# CMake build script for the libnavigate
+#
+# Building (out of source build):
+# mkdir build && cd build
+# cmake [-G "Generator"] [-DSETTINGS=VALUE] ..
+# cmake --build .
+
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT(navigate)
+
+# Prepare libnavigate version fields
+FILE(STRINGS "src/version" LIBNAVIGATE_VERSION_IN)
+
+STRING(REGEX MATCHALL "[0-9]+" LIBNAVIGATE_VERSION_LIST "${LIBNAVIGATE_VERSION_IN}")
+
+LIST(GET LIBNAVIGATE_VERSION_LIST 0 LIBNAVIGATE_VERSION_MAJOR)
+LIST(GET LIBNAVIGATE_VERSION_LIST 1 LIBNAVIGATE_VERSION_MINOR)
+LIST(GET LIBNAVIGATE_VERSION_LIST 2 LIBNAVIGATE_VERSION_PATCH)
+SET(LIBNAVIGATE_VERSION_STRING "${LIBNAVIGATE_VERSION_IN}")
+
+FILE(READ "src/version.h.in" LIBNAVIGATE_VERSION_FILE)
+STRING(REGEX REPLACE "\\$LIBNAVIGATE_VERSION_STRING\\$" "\"${LIBNAVIGATE_VERSION_STRING}\"" LIBNAVIGATE_VERSION_FILE ${LIBNAVIGATE_VERSION_FILE})
+STRING(REGEX REPLACE "\\$LIBNAVIGATE_VERSION_MAJOR\\$" "${LIBNAVIGATE_VERSION_MAJOR}" LIBNAVIGATE_VERSION_FILE ${LIBNAVIGATE_VERSION_FILE})
+STRING(REGEX REPLACE "\\$LIBNAVIGATE_VERSION_MINOR\\$" "${LIBNAVIGATE_VERSION_MINOR}" LIBNAVIGATE_VERSION_FILE ${LIBNAVIGATE_VERSION_FILE})
+STRING(REGEX REPLACE "\\$LIBNAVIGATE_VERSION_PATCH\\$" "${LIBNAVIGATE_VERSION_PATCH}" LIBNAVIGATE_VERSION_FILE ${LIBNAVIGATE_VERSION_FILE})
+FILE(WRITE "src/version.h" ${LIBNAVIGATE_VERSION_FILE})
 
 # Find required dependencies
 INCLUDE_DIRECTORIES(include)
@@ -39,4 +63,3 @@ IF(BUILD_TESTS)
 		TARGET_LINK_LIBRARIES(test m)
 	ENDIF ()
 ENDIF()
-
