@@ -1,5 +1,13 @@
-libnavigate
+libnavigate - the IEC 61162-1/NMEA 0183 messages generating/parsing library
 ===========
 
-Library for generating/parsing maritime navigation protocol (IEC 61162-1 2000-07
-and NMEA 0183).
+libnavigate is a portable C/C++ implementation of utilities for generating/parsing
+maritime navigation protocol (IEC 61162-1 2000-07 and NMEA 0183).
+
+License
+=======
+
+libnavigate is under GPL3. This means you can use the library with any open source programs.
+You cannot modify libnavigate and distribute it without supplying the source.
+
+See the COPYING file for the full license text.
