@@ -2,8 +2,12 @@
 #define INCLUDE_navi_version_h
 
 //
-// major.minor.patch[-suffix]
+// major.minor.patch[suffix]
 //
-#define LIBNAVIGATE_VERSION		"0.1.0"
+#define LIBNAVIGATE_VERSION_STRING	"0.1.0a"
+
+#define LIBNAVIGATE_VERSION_MAJOR	0
+#define LIBNAVIGATE_VERSION_MINOR	1
+#define LIBNAVIGATE_VERSION_PATCH	0
 
 #endif // INCLUDE_navi_version_h
