@@ -1,0 +1,13 @@
+#ifndef INCLUDE_navi_version_h
+#define INCLUDE_navi_version_h
+
+//
+// major.minor.patch[suffix]
+//
+#define LIBNAVIGATE_VERSION_STRING	$LIBNAVIGATE_VERSION_STRING$
+
+#define LIBNAVIGATE_VERSION_MAJOR	$LIBNAVIGATE_VERSION_MAJOR$
+#define LIBNAVIGATE_VERSION_MINOR	$LIBNAVIGATE_VERSION_MINOR$
+#define LIBNAVIGATE_VERSION_PATCH	$LIBNAVIGATE_VERSION_PATCH$
+
+#endif // INCLUDE_navi_version_h
