@@ -1,0 +1,36 @@
+#include <winver.h>
+#include "../version.h"
+
+VS_VERSION_INFO		VERSIONINFO	MOVEABLE IMPURE LOADONCALL DISCARDABLE
+  FILEVERSION		LIBNAVIGATE_VERSION_MAJOR,LIBNAVIGATE_VERSION_MINOR,LIBNAVIGATE_VERSION_PATCH,0
+  PRODUCTVERSION	LIBNAVIGATE_VERSION_MAJOR,LIBNAVIGATE_VERSION_MINOR,LIBNAVIGATE_VERSION_PATCH,0
+  FILEFLAGSMASK		VS_FFI_FILEFLAGSMASK
+#ifdef _DEBUG
+  FILEFLAGS		1
+#else
+  FILEFLAGS		0
+#endif
+  FILEOS		VOS__WINDOWS32
+  FILETYPE		VFT_DLL
+  FILESUBTYPE		0	// not used
+BEGIN
+  BLOCK "StringFileInfo"
+  BEGIN
+    BLOCK "040904E4"
+    //language ID = U.S. English, char set = Windows, Multilingual
+    BEGIN
+      VALUE "FileDescription", "IEC 61162-1/NMEA 0183 messages handling library\0"
+      VALUE "FileVersion", LIBNAVIGATE_VERSION_STRING "\0"
+      VALUE "InternalName", "navigate.dll\0"
+      VALUE "LegalCopyright", "Copyright (C) 2012 Igor Gorbunov\0"
+      VALUE "OriginalFilename", "navigate.dll\0"
+      VALUE "ProductName", "libnavigate\0"
+      VALUE "ProductVersion", LIBNAVIGATE_VERSION_STRING "\0"
+      VALUE "Comments", "For more information visit http://github.com/igor-gorbunov/libnavigate\0"
+    END
+  END
+  BLOCK "VarFileInfo"
+  BEGIN
+    VALUE "Translation", 0x0409, 1252
+  END
+END
