@@ -1,3 +1,9 @@
+2012-09-12  Igor Gorbunov  <igor.genius@gmail.com>
+
+	* Moving to CMake build system.
+	* Restructured the library.
+	* Prepared to the release 1.
+
 2012-06-16  Igor Gorbunov  <igor.genius@gmail.com>
 
 	* ChangeLog: This file created.
@@ -7,4 +13,3 @@ Copyright 2012 Igor Gorbunov
 Copying and distribution of this file, with or without modification, are
 permitted in any medium without royalty provided the copyright notice
 and this notice are preserved.
-
